--- a/Administracion.resx
+++ b/Administracion.resx
@@ -1026,10 +1026,10 @@
         RU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnMinimizar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAWgAAABbCAYAAABefB9iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAAEVBJREFUeF7t3XlsHFWeB/AOvrp9dRzHx+Sw4yRkkjgJIfd9ciQOh2FiQQZpoxFi
+        vAAADrwBlbxySQAAEVBJREFUeF7t3XlsHFWeB/AOvrp9dRzHx+Sw4yRkkjgJIfd9ciQOh2FiQQZpoxFi
         IYOURVrQAKtlUIRmRwIh2F0zaIEFaVktCgy7O0mAWcKwhtmQeJNhPEec2QCT00d8345jd/b3LfWv9Lr8
         fOJOh/D946OqfvXqvapy99fPr6vbvsuXL19RoVAopb29fUZTU9Oc5ubmebKcLxZ4oEy55Y2NjTdAXV3d
         QnHjhQsXFonFtbW1S8TSmpqaZWHLdVldXY11taK+vn7ZAJbaNDQ0YOlslz6cNkDaXSlWQVVV1WqlZWGo
@@ -1106,7 +1106,7 @@
         IEe67Pt/oJRqLaryojYAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAWgAAAFqCAYAAAA3LcDeAAAABGdBTUEAALGPC/xhBQAASWtJREFUeF7t
         nQl8XFd59kliW7JsExO2AM1m7ZIdhaXAV/q1KUu8abURraHQQMFtQw1SvMUJBUFLFyjJhxvHqLEj7Dgp
